--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -48,7 +48,9 @@ jobs:
     - name: Build and Push Docker image
       run: |
         IMAGE_NAME="${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_REPOSITORY }}/api"
-        gcloud builds submit --tag ${IMAGE_NAME}:${{ github.sha }} --tag ${IMAGE_NAME}:latest
+        docker build -t ${IMAGE_NAME}:${{ github.sha }} -t ${IMAGE_NAME}:latest .
+        docker push ${IMAGE_NAME}:${{ github.sha }}
+        docker push ${IMAGE_NAME}:latest
         
     - name: Deploy to Cloud Run
       run: |
